--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Ejemplo de pagina</h1>
+    <h2>Pagina web con Github</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem alias non consectetur commodi molestiae, perferendis dolores corrupti sit voluptate veritatis laboriosam magnam hic accusamus iusto, facilis eveniet, ut repellendus! Nisi?</p>
+</body>
+</html>
